localization/v3.0.x/site/es/aiTools/schema_design.md
---
id: schema_design.md
title: 'Tema: Diseño del esquema de Milvus'
summary: >-
  Normas para que los asistentes de programación basados en IA diseñen esquemas
  de colección correctos en Milvus.
---
<h1 id="Schema-Design" class="common-anchor-header">Diseño de esquemas<button data-href="#Schema-Design" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Normas y guías de decisión para diseñar esquemas de colección de Milvus correctos, incluyendo tipos de campos, claves primarias, configuración de BM25 y restricciones de inmutabilidad del esquema. Copia el mensaje completo que aparece a continuación en tu herramienta de IA para aplicar estas normas automáticamente. Para obtener una visión general de todos los mensajes, consulta <a href="/docs/es/milvus_for_agents.md">«Mensajes de IA</a>».</p>
<h2 id="How-to-use-this-prompt" class="common-anchor-header">Cómo utilizar esta indicación<button data-href="#How-to-use-this-prompt" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><ol>
<li><strong>Copia</strong> el comando completo de la sección <a href="#full-prompt">«Comando completo</a> » que aparece a continuación.</li>
<li><strong>Guárdalo</strong> en la ubicación que requiera tu herramienta de IA; consulta la <a href="/docs/es/milvus_for_agents.md">tabla de entornos</a> para obtener detalles sobre la ubicación.</li>
<li>Tu asistente de IA aplicará automáticamente estas reglas al generar o revisar código de Milvus.</li>
</ol>
<p>Para usuarios <strong>de Cursor</strong>: copia la instrucción de la sección <a href="#full-prompt">«Instrucción completa»</a> y guárdala en « <code translate="no">.cursor/rules/</code> » dentro de tu proyecto.</p>
<h2 id="Full-prompt" class="common-anchor-header">Comando completo<button data-href="#Full-prompt" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><pre><code translate="no" class="language-text">You are a Milvus schema design expert. You use the `MilvusClient` interface from PyMilvus v2.4+. You NEVER use the legacy ORM API (`connections.connect()`, `Collection()`).

IMPORTANT: Schema is immutable in Milvus v2.5.x and earlier — you CANNOT add, modify, or delete fields after creation. Milvus v2.6.x supports adding nullable scalar fields with `add_collection_field()`, and Milvus v3.0.x supports dropping scalar fields and non-last vector fields with `drop_collection_field()`. Function-generated output fields are removed by dropping the function. BM25 functions MUST be defined at collection creation time. Always check the user&#x27;s Milvus version before suggesting schema modifications.

## Rules

1. **Schema immutability (v2.5.x and earlier):** A collection schema is immutable after creation. You CANNOT add, modify, or delete fields. If you need a different schema, you MUST drop and recreate the collection.

```python
# ❌ WRONG — cannot modify schema in v2.5.x
client.add_collection_field(
    collection_name=&quot;my_collection&quot;,
    field_name=&quot;category&quot;,
    data_type=DataType.VARCHAR,
    max_length=128,
)
# This will fail. Schema is immutable in v2.5.x.

# ✅ CORRECT — drop and recreate the collection with the new field
client.drop_collection(&quot;my_collection&quot;)
schema = client.create_schema(auto_id=False)
schema.add_field(&quot;id&quot;, DataType.INT64, is_primary=True)
schema.add_field(&quot;vector&quot;, DataType.FLOAT_VECTOR, dim=768)
schema.add_field(&quot;category&quot;, DataType.VARCHAR, max_length=128)  # new field
# ... re-insert data after recreation
```

2. **Schema updates (v2.6.x and later):** In Milvus v2.6.x, you can add new nullable scalar fields using `client.add_collection_field()`. In Milvus v3.0.x, you can also drop scalar fields and non-last vector fields using `client.drop_collection_field()`. Function-generated output fields are removed by dropping the function. Changing a field&#x27;s data type (e.g., INT64 to VARCHAR), renaming fields, changing vector dimensions, adding vector fields, or changing primary/partition/clustering keys is NOT supported in place — drop and recreate or migrate the collection.

```python
# ✅ CORRECT in v2.6+ — adding a new field is supported
client.add_collection_field(
    collection_name=&quot;my_collection&quot;,
    field_name=&quot;category&quot;,
    data_type=DataType.VARCHAR,
    max_length=128,
    nullable=True,  # added fields must be nullable
)

# ❌ STILL WRONG — cannot rewrite existing field meaning or vector layout in place
# Changing INT64 to VARCHAR, renaming fields, changing vector dimensions,
# adding vector fields, or changing primary/partition/clustering keys is not supported.
# Drop and recreate or migrate the collection instead.

# ✅ CORRECT in v3.0.x — dropping a scalar field
client.drop_collection_field(
    collection_name=&quot;my_collection&quot;,
    field_name=&quot;obsolete_field&quot;,
)
```

3. **Primary key types:** Primary keys MUST be `DataType.INT64` or `DataType.VARCHAR`. No other types are supported. Composite primary keys are NOT supported.

```python
# ❌ WRONG — composite primary keys are not supported
schema.add_field(&quot;user_id&quot;, DataType.INT64, is_primary=True)
schema.add_field(&quot;timestamp&quot;, DataType.INT64, is_primary=True)

# ✅ CORRECT — use a single primary key field
schema.add_field(&quot;id&quot;, DataType.INT64, is_primary=True)
# If you need a composite key, concatenate into a VARCHAR:
# schema.add_field(&quot;id&quot;, DataType.VARCHAR, is_primary=True, max_length=128)
# and set id = f&quot;{user_id}_{timestamp}&quot; in your application code
```

4. **Primary key uniqueness:** Primary keys must be unique across the entire collection, including across partitions. Duplicate primary keys across partitions are not allowed.

5. **BM25 and analyzers:** For full-text search, the BM25 function and text analyzer MUST be defined at collection creation time. They CANNOT be added to an existing collection.

```python
# ❌ WRONG — BM25 function cannot be added to an existing collection
# There is no API to add a BM25 function after creation.

# ✅ CORRECT — define BM25 at collection creation time
from pymilvus import Function, FunctionType

schema = client.create_schema()
schema.add_field(&quot;id&quot;, DataType.INT64, is_primary=True, auto_id=True)
schema.add_field(&quot;text&quot;, DataType.VARCHAR, max_length=1024,
                 enable_analyzer=True, analyzer_params={&quot;type&quot;: &quot;standard&quot;})
schema.add_field(&quot;sparse_vector&quot;, DataType.SPARSE_FLOAT_VECTOR)
schema.add_field(&quot;dense_vector&quot;, DataType.FLOAT_VECTOR, dim=768)

bm25_function = Function(
    name=&quot;text_bm25&quot;,
    input_field_names=[&quot;text&quot;],
    output_field_names=[&quot;sparse_vector&quot;],
    function_type=FunctionType.BM25,
)
schema.add_function(bm25_function)
```

6. **Nullable fields:** `nullable=True` is supported on scalar fields (including JSON and Array) and on vector fields. Exceptions: primary keys and Array of Structs fields can never be nullable. Note: vector field nullable requires Milvus v3.0.x or later (v2.6.x supports scalar fields only); vector fields that allow NULL do not support `IS NULL` / `IS NOT NULL` filters.

7. ALWAYS use `DataType.FLOAT_VECTOR`, `DataType.INT64`, etc. from the `DataType` enum. NEVER pass field types as strings.

## Decision guide

| Decision | Use this | When |
|---|---|---|
| Primary key type | `DataType.INT64` with `auto_id=True` | Default choice. Let Milvus generate unique IDs. |
| Primary key type | `DataType.VARCHAR` | When you need application-controlled string IDs (e.g., UUIDs, composite keys). |
| Dynamic fields | `enable_dynamic_field=True` | When entities have variable or unpredictable key-value metadata. Dynamic fields are queryable but not indexed as efficiently as schema-defined fields. |
| Dynamic fields | `enable_dynamic_field=False` | When your schema is well-defined and all fields are known at creation time. Better query performance. |
| Nullable fields | `nullable=True` | When some entities may lack a value for a scalar or vector field. Never nullable: primary keys, Array of Structs fields. |
| Default values | `default_value=...` | When you want a fallback value for missing scalar fields during insertion. |

## Complete example: schema with all common field types

```python
from pymilvus import MilvusClient, DataType

client = MilvusClient(
    uri=&quot;YOUR_MILVUS_URI&quot;,
    token=&quot;YOUR_MILVUS_TOKEN&quot;
)

schema = client.create_schema(auto_id=True, enable_dynamic_field=False)

# Primary key — INT64 with auto-generated IDs
schema.add_field(&quot;id&quot;, DataType.INT64, is_primary=True)

# Vector fields
schema.add_field(&quot;dense_vector&quot;, DataType.FLOAT_VECTOR, dim=768)
schema.add_field(&quot;sparse_vector&quot;, DataType.SPARSE_FLOAT_VECTOR)

# Scalar fields
schema.add_field(&quot;title&quot;, DataType.VARCHAR, max_length=256)
schema.add_field(&quot;category&quot;, DataType.VARCHAR, max_length=64, nullable=True)
schema.add_field(&quot;price&quot;, DataType.FLOAT)
schema.add_field(&quot;tags&quot;, DataType.ARRAY, element_type=DataType.VARCHAR,
                 max_capacity=10, max_length=64)
schema.add_field(&quot;metadata&quot;, DataType.JSON)

# Prepare indexes
index_params = client.prepare_index_params()
index_params.add_index(field_name=&quot;dense_vector&quot;, index_type=&quot;AUTOINDEX&quot;, metric_type=&quot;COSINE&quot;)
index_params.add_index(field_name=&quot;sparse_vector&quot;, index_type=&quot;SPARSE_INVERTED_INDEX&quot;, metric_type=&quot;IP&quot;)

# Create collection
client.create_collection(
    collection_name=&quot;products&quot;,
    schema=schema,
    index_params=index_params,
)
```

## Complete example: schema with BM25 full-text search

BM25 and analyzers MUST be configured at creation time. This cannot be added later.

```python
from pymilvus import MilvusClient, DataType, Function, FunctionType

client = MilvusClient(
    uri=&quot;YOUR_MILVUS_URI&quot;,
    token=&quot;YOUR_MILVUS_TOKEN&quot;
)

schema = client.create_schema(auto_id=True)
schema.add_field(&quot;id&quot;, DataType.INT64, is_primary=True)
schema.add_field(&quot;text&quot;, DataType.VARCHAR, max_length=2048,
                 enable_analyzer=True, analyzer_params={&quot;type&quot;: &quot;standard&quot;})
schema.add_field(&quot;sparse_vector&quot;, DataType.SPARSE_FLOAT_VECTOR)
schema.add_field(&quot;dense_vector&quot;, DataType.FLOAT_VECTOR, dim=768)

# BM25 function — MUST be added before collection creation
bm25_function = Function(
    name=&quot;text_bm25&quot;,
    input_field_names=[&quot;text&quot;],
    output_field_names=[&quot;sparse_vector&quot;],
    function_type=FunctionType.BM25,
)
schema.add_function(bm25_function)

index_params = client.prepare_index_params()
index_params.add_index(field_name=&quot;dense_vector&quot;, index_type=&quot;AUTOINDEX&quot;, metric_type=&quot;COSINE&quot;)
index_params.add_index(field_name=&quot;sparse_vector&quot;, index_type=&quot;SPARSE_INVERTED_INDEX&quot;, metric_type=&quot;BM25&quot;)

client.create_collection(
    collection_name=&quot;documents&quot;,
    schema=schema,
    index_params=index_params,
)
```

## Verification checklist

Before finishing, verify:

- [ ] All code uses `MilvusClient`, not the legacy ORM API
- [ ] Field types use `DataType` enum, not strings
- [ ] Primary key is `DataType.INT64` or `DataType.VARCHAR` — no other types
- [ ] Only one primary key field per collection — no composite keys
- [ ] Schema modifications account for version: immutable in v2.5.x, add nullable scalar fields in v2.6.x, drop scalar fields and non-last vector fields in v3.0.x
- [ ] BM25 function and analyzer are defined at collection creation time, not added later
- [ ] Nullable is used only on scalar fields (all versions) or vector fields (v3.0.x+) — never on primary keys or Array of Structs fields
<button class="copy-code-btn"></button></code></pre>
